--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div class="timer-wrap">
 					<br/>
 					<h3 class="status">Session</h3>
-					<h3 class="current-time">25:00</h3>
+					<h3 class="current-time">25 : 00</h3>
 				</div>
 			</div>
 		</div>
