Feat: Added session-input and break-input classes.
These classes are used to read the time set by the user.

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 				<div class="session">
 					<h5>Session Length</h5>
 					<button class="controller plus">+</button>
-					<input class="time-input" type="text" placeholder="25"></input>
+					<input class="time-input session-input" type="text" placeholder="25"></input>
 					<button class="controller minus">-</button>
 				</div>
 				<div class="break">
 					<h5>Break Length</h5>
 					<button class="controller plus">+</button>
-					<input class="time-input" type="text" placeholder="5"></input>
+					<input class="time-input break-input" type="text" placeholder="5"></input>
 					<button class="controller minus">-</button>
 				</div>					
 			</div>
