Feat: Reset button added.
A reset button now resets the timer to the default value or the value set by the user.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 					<input class="time-input session-input" type="text" placeholder="25"></input>
 					<button class="controller minus">-</button>
 				</div>
+				<div class="reset">
+					<button class="reset-button">Reset</button>
+				</div>
 				<div class="break">
 					<h5>Break Length</h5>
 					<button class="controller plus">+</button>
