--- a/index.html
+++ b/index.html
@@ -3,30 +3,42 @@
 <head>
 	<title>Pomodoro Clock</title>
 	<meta charset="UTF-8">
+	<!-- Call to google fonts. -->
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/jquery.min.js"></script>
 	<script src="js/script.js"></script>
 </head>
 <body>
+	<!-- Container div, includes all elements. -->
 	<div class="container">
+		<!-- The clock div, includes the header, instructions, controls and the timer. -->
 		<div class="clock">
+			<!-- Page's header -->
 			<h2 class="header">Pomodoro Clock</h2>
+			<!-- Instructions section. -->
 			<div class="instructions">
-				<p>Use the " + " and  " - " signs to adjust the session and break times.</p>
-				<p>To start the timer click on the clock.</p>
-				<p>To reset the timer, click on it and adjust and times then click on the timer again.</p>
+				<p>Use the " + " and  " - " signs to adjust the session and break times. The value can be entered directly in the input field.</p>
+				<p>To start (resume) or pause the timer click on the clock.</p>
+				<p>To reset the timer, adjust the session and break times and click on Reset button.</p>
 			</div>
+			<!-- The controls section has three parts, controls for session timer, reset button and controls for break timer. -->
 			<div class="controls">
+				<!-- Session controls -->
 				<div class="session">
 					<h5>Session Length</h5>
+					<!-- + button for session -->
 					<button class="controller plus">+</button>
+					<!-- Input field for session timer, default value stored in placeholder -->
 					<input class="time-input session-input" type="text" placeholder="25"></input>
+					<!-- - button for seesion -->
 					<button class="controller minus">-</button>
 				</div>
+				<!-- Reset button div. Given own div for styling between session and break control divs -->
 				<div class="reset">
 					<button class="reset-button">Reset</button>
 				</div>
+				<!-- Break controls div, same layout as session div. -->
 				<div class="break">
 					<h5>Break Length</h5>
 					<button class="controller plus">+</button>
@@ -34,10 +46,13 @@
 					<button class="controller minus">-</button>
 				</div>					
 			</div>
+			<!-- Timer div -->
 			<div class="timer">
 				<div class="timer-wrap">
 					<br/>
+					<!-- Status of the timer (session or break) -->
 					<h3 class="status">Session</h3>
+					<!-- Time -->
 					<h3 class="current-time">25 : 00</h3>
 				</div>
 			</div>
